# bfCompiler

./: .gitignore  LICENSE  README.md  bfCompiler.cabal  package.yaml  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/30657945/: cabal_macros.h
.stack-work/ghci/65452e43/: cabal_macros.h
src/: .Main.hs.kate-swp  BFOptimiser.hs  BFtoIR.hs  Compiler.hs  Main.hs  Main.hs~  Optimiser.hs  Parser.hs  Types.hs
test/: Optimiser.hs
